Ordered List Added

--- a/Wiki-page.html
+++ b/Wiki-page.html
@@ -12,7 +12,9 @@
         bear species. including the Atlas bear and the Himalayan brown bear. <br/><br/>
 
 <a href="https://en.wikipedia.org/wiki/Brown_bear">Learn More</a> <br/> <br/>
-        
+  Bears Types: <ol>
+ <li> White </li><li> Black </li>
+</ol>
  Here are some bear species: <ul>
              <li>Arctos</li> <li>Collarus</li> <li>Horribilis</li> <li> Nelsoni (extinct) </li>
             </ul> 
