Unordered List Added

--- a/Wiki-page.html
+++ b/Wiki-page.html
@@ -15,6 +15,9 @@
   Bears Types: <ol>
  <li> White </li><li> Black </li>
 </ol>
+Bears Food: <ul>
+<li> Fish </li><li> Birds </li>
+</ul>
  Here are some bear species: <ul>
              <li>Arctos</li> <li>Collarus</li> <li>Horribilis</li> <li> Nelsoni (extinct) </li>
             </ul> 
