Inline Head Design added

--- a/Wiki-page.html
+++ b/Wiki-page.html
@@ -4,7 +4,7 @@
          <title>The Brown Bear</title> 
     </head>
      <body>  
-        <h1>The Brown Bear</h1>
+        <h1 style="color: blue; text-align: center;">The Brown Bear</h1>
         
         <p> Testing the git hub approach on the files </p>
         The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its<br/>
