--- a/Wiki-page.html
+++ b/Wiki-page.html
@@ -6,7 +6,7 @@
      <body>  
         <h1 style="color: blue; text-align: center;">The Brown Bear</h1>
         
-        <p> Testing the git hub approach on the files </p>
+        <p style="color: red; text-align: center;"> Testing the git hub approach on the files </p>
         The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its<br/>
         conservation status is currently "Least Concern." There are many subspecies within the brown <br/>
         bear species. including the Atlas bear and the Himalayan brown bear. <br/><br/>
